Fix: Copy/Move to collection picks up wrong destination path and fails silently

BUG: 314460
FIXED-IN: 2.8